# ohpc-1

tests/libs/plasma/: Makefile.am  configure.ac
tests/libs/plasma/tests/: Makefile.am  testing_results.txt
tests/libs/ptscotch/tests/: Makefile.am  ohpc-ptscotch-kick-test.sh
tests/libs/scotch/: configure.ac
tests/libs/scotch/tests/: Makefile.am  ohpc-scotch-kick-test.sh  test_common_random.c  test_common_thread.c
