TESTS_ENVIRONMENT = 
CLEANFILES        = 
TESTS             = ohpc-ptscotch-kick-test.sh
check_PROGRAMS    = test_strat_par	\
	             test_scotch_dgraph_band	\
	             test_scotch_dgraph_coarsen	\
	             test_scotch_dgraph_check	\
	             test_scotch_dgraph_grow	\
	             test_scotch_dgraph_redist

dist_noinst_DATA  = $(TESTS)

test_strat_par_SOURCES               = test_strat_par.c
test_scotch_dgraph_band_SOURCES      = test_scotch_dgraph_band.c
test_scotch_dgraph_coarsen_SOURCES   = test_scotch_dgraph_coarsen.c
test_scotch_dgraph_check_SOURCES     = test_scotch_dgraph_check.c
test_scotch_dgraph_grow_SOURCES      = test_scotch_dgraph_grow.c
test_scotch_dgraph_redist_SOURCES    = test_scotch_dgraph_redist.c

